Details
Description
If we enable/disable all checkboxes and do it at very fast pace. We will start seeing checkbox tick not getting updated.
Attachments
Issue Links
- relates to
-
JDK-8258583 Verify whether we need setNeedsDisplay or not with CVDisplayLink
-
- Open
-
-
JDK-8258660 Combine text rendering calls using check_previous_op
-
- Open
-
-
JDK-8251477 java/awt/Frame/MiscUndecorated/RepaintTest.java fails with metal pipeline
-
- Resolved
-
-
JDK-8259038 Stop CVDisplayLink when there is no active rendering
-
- Resolved
-
-
JDK-8247739 Lanai : SwingSet2Demo -More than one radio button can be selected the same time
-
- Resolved
-
-
JDK-8252501 Sometimes more than one menu items are shown as highlighted on hover
-
- Resolved
-
-
JDK-8242187 Lanai - JCheckBox and JRadioButton can get into inconsitent visual state -- but recover on window refresh
-
- Resolved
-
-
JDK-8252907 Motif L&F - SwingSet2 - Two Toolbar buttons are shown as selected
-
- Resolved
-