8247332: Checkbox reaches inconsistent state on tap to click 8251477: java/awt/Frame/MiscUndecorated/RepaintTest.java fails with metal pipeline 8247739: Lanai : SwingSet2Demo -More than one radio button can be selected the same time 8252501: Sometimes more than one menu items are shown as highlighted on hover 8242187: Lanai - JCheckBox and JRadioButton can get into inconsitent visual state -- but recover on window refresh 8252907: Motif L&F - SwingSet2 - Two Toolbar buttons are shown as selected